added dependencies for h2 and config file, fixed entity relationships, added all controller files

--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,9 @@ build/
 .vscode/
 
 # Configuration files
+application-test.properties
 application.properties
 application.yml
+
+# Local configuration file
+.env
